test/corpus/blocks.txt
==================
Source block
==================

#+begin_src python
def hello():
    print("Hello")
#+end_src

---

(document
  (block
    (block_begin
      (block_type)
      (language))
    (block_content)
    (block_end)))

==================
Example block
==================

#+begin_example
Some example text
  with indentation
#+end_example

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))

==================
Quote block
==================

#+begin_quote
This is a quoted passage.
#+end_quote

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))

==================
Block under headline
==================

* Headline
#+begin_src elisp
(message "hello")
#+end_src

---

(document
  (headline
    (stars)
    (title))
  (block
    (block_begin
      (block_type)
      (language))
    (block_content)
    (block_end)))

==================
Multiple blocks
==================

#+begin_example
First block
#+end_example

#+begin_quote
Second block
#+end_quote

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end))
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))

==================
Verse block
==================

#+begin_verse
Great clouds overhead
Tiny black birds rise and fall
Snow covers Emacs
#+end_verse

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))

==================
Center block
==================

#+begin_center
This text is centered
#+end_center

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))

==================
Multiple special blocks
==================

#+begin_verse
Poetry here
#+end_verse

#+begin_center
Centered text
#+end_center

---

(document
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end))
  (block
    (block_begin
      (block_type))
    (block_content)
    (block_end)))
