test/corpus/clock.txt
==================
Simple clock with inactive timestamp
==================

CLOCK: [2024-01-15 Mon 10:30]

---

(document
  (clock))

==================
Clock with timestamp range and duration
==================

CLOCK: [2024-01-15 Mon 10:30]--[2024-01-15 Mon 12:15] =>  1:45

---

(document
  (clock))

==================
Clock with duration only
==================

CLOCK: => 2:30

---

(document
  (clock))

==================
Clock under headline
==================

* Task completed
CLOCK: [2024-01-15 Mon 14:00]--[2024-01-15 Mon 15:30] =>  1:30

---

(document
  (headline
    (stars)
    (title))
  (clock))

==================
Multiple clock entries
==================

* Project work
CLOCK: [2024-01-15 Mon 09:00]--[2024-01-15 Mon 10:30] =>  1:30
CLOCK: [2024-01-15 Mon 14:00]--[2024-01-15 Mon 16:00] =>  2:00

---

(document
  (headline
    (stars)
    (title))
  (clock)
  (clock))

==================
Clock with lowercase keyword
==================

clock: [2024-01-15 Mon 10:30]

---

(document
  (clock))

==================
Clock with detailed timestamp
==================

CLOCK: [2024-01-15 Mon 10:30:45]--[2024-01-15 Mon 12:15:30] =>  1:44

---

(document
  (clock))
