test/corpus/entities.txt
==================
Greek letter alpha
==================

\alpha

---

(document
  (entity))

==================
Greek letter beta
==================

\beta

---

(document
  (entity))

==================
Non-breaking space
==================

\nbsp

---

(document
  (entity))

==================
Entity with explicit braces
==================

\alpha{}

---

(document
  (entity))

==================
Entity under headline
==================

* Mathematics

\gamma

Some text.

---

(document
  (headline
    (stars)
    (title))
  (entity)
  (paragraph))

==================
Multiple entities
==================

\alpha
\beta

---

(document
  (entity)
  (entity))
