test/corpus/headlines.txt
==================
Simple headline
==================

* Headline

---

(document
  (headline
    (stars)
    (title)))

==================
Multiple headlines
==================

* First headline
** Second level
* Another top level

---

(document
  (headline
    (stars)
    (title))
  (headline
    (stars)
    (title))
  (headline
    (stars)
    (title)))

==================
Headline with TODO keyword
==================

* TODO Task to do

---

(document
  (headline
    (stars)
    (keyword)
    (title)))

==================
Headline with priority
==================

* [#A] Important task

---

(document
  (headline
    (stars)
    (priority)
    (title)))

==================
Headline with text
==================

* Headline with some text content

---

(document
  (headline
    (stars)
    (title)))

==================
Complete headline with keyword and priority
==================

* TODO [#A] Important task to complete

---

(document
  (headline
    (stars)
    (keyword)
    (priority)
    (title)))

==================
Headline with multiple levels
==================

* Level 1
** Level 2
*** Level 3

---

(document
  (headline
    (stars)
    (title))
  (headline
    (stars)
    (title))
  (headline
    (stars)
    (title)))

==================
Headline with single tag
==================

* Task to complete :work:

---

(document
  (headline
    (stars)
    (title)))

==================
Headline with multiple tags
==================

* Project documentation :work:urgent:

---

(document
  (headline
    (stars)
    (title)))

==================
Headline with TODO keyword and tags
==================

* TODO Fix the bug :bug:urgent:

---

(document
  (headline
    (stars)
    (keyword)
    (title)))

==================
Headline with priority and tags
==================

* [#A] Important meeting :meeting:work:

---

(document
  (headline
    (stars)
    (priority)
    (title)))

==================
Complete headline with keyword priority and tags
==================

* TODO [#A] Complete quarterly report :work:deadline:

---

(document
  (headline
    (stars)
    (keyword)
    (priority)
    (title)))

==================
Headline with colon in title but no tags
==================

* Read the book: "The Great Gatsby"

---

(document
  (headline
    (stars)
    (title)))

==================
Headline with colon in title and tags
==================

* Review PR: Add new feature :review:code:

---

(document
  (headline
    (stars)
    (title)))

==================
Headline with numbers in tags
==================

* Sprint planning :sprint2024:q1:

---

(document
  (headline
    (stars)
    (title)))

==================
Headline with special chars in tags
==================

* Development task :dev_work:@home:#project:

---

(document
  (headline
    (stars)
    (title)))
