test/corpus/paragraphs.txt
==================
Simple paragraph
==================

This is a simple paragraph.

---

(document
  (paragraph))

==================
Multiple paragraphs
==================

First paragraph with some text.

Second paragraph with more text.

---

(document
  (paragraph)
  (paragraph))

==================
Paragraph under headline
==================

* Headline
This is a paragraph under the headline.

---

(document
  (headline
    (stars)
    (title))
  (paragraph))

==================
Multiple paragraphs under headline
==================

* Headline
First paragraph.

Second paragraph.

---

(document
  (headline
    (stars)
    (title))
  (paragraph)
  (paragraph))
