test/corpus/property_drawers.txt
==================
Simple property drawer
==================

* Headline
:PROPERTIES:
:ID: abc123
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value))))

==================
Property drawer with multiple properties
==================

* Task
:PROPERTIES:
:CREATED: 2024-01-01
:STATUS: in-progress
:PRIORITY: high
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value))
    (property
      (key)
      (value))
    (property
      (key)
      (value))))

==================
Property drawer with content after
==================

* Headline
:PROPERTIES:
:ID: test
:END:

Some paragraph text.

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value)))
  (paragraph))

==================
Multiple headlines with property drawers
==================

* First
:PROPERTIES:
:ID: first
:END:

* Second
:PROPERTIES:
:ID: second
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value)))
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value))))

==================
Property with accumulation syntax
==================

* Headline
:PROPERTIES:
:TAGS+: work
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value))))

==================
Multiple accumulative properties
==================

* Headline
:PROPERTIES:
:TAGS+: work
:TAGS+: project
:CATEGORY: tasks
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key)
      (value))
    (property
      (key)
      (value))
    (property
      (key)
      (value))))

==================
Accumulative property without value
==================

* Headline
:PROPERTIES:
:EMPTY+:
:END:

---

(document
  (headline
    (stars)
    (title))
  (property_drawer
    (property
      (key))))
